Fix(boot): Fixed broken css

--- a/css/dos.css
+++ b/css/dos.css
@@ -25,12 +25,19 @@
     }
 }
 
+html, body {
+    width: 100%;
+    height: 100%
+}
+
 .dos-window {
     background-color: black;
     color: white;
     font-family: "DOS";
     font-size: var(--font-size);
     padding: 1%;
+    width: 100%;
+    height: 100%
 }
 
 .dos-window * {
